--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yhmwe2U0LDxBk6TPbsry8uvSK6AIZCqKhtyKdRD2iVCHOCSd5FvW09bkqr7eiLxzBdYGE2iIVm+9EJpMhD51bQHApy4WEpE/LMC3HkCg4gRJNdMY0RZiSUz/Ks6QcJiv">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="f4+jPf1Qgn6kLXSDP5YsTdVgt72FFapDOyxJhTOwE081VBlT4GrdTjN8T2ad0SQi3H6ICUBJlRU7QuGFpQgAD1Ah36v/CH6unoGgv+0g4YNn6eEg0wnRqcNOkkerq9Xc">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
