--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XVpGkHdNnITvQaOeeOqUeAivDljCnljEYhEPGzWYJzqhrh5/QTDhNTEOWKWqi3jAnnVDnr1PvTTyB1bxx4H70fTiMwL5URx+LfW4hZcZ3Bfnh+wvwiMC5vvPkAZ1x50B">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xWl5X+rDicHpmFGndGsxoXwzsiq/+McXVn4kFf0ctIWkoWqLewYyqDsq/vBSP7dmvs2LceX3fEcqzOLw8ULUKthpmypVXtPbVpVgd2qd4kIuawfXX/y+bVLot4DpCT5S">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
