--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -398,7 +398,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Big changes are are on the horizon for Michigan's No-Fault law. <span style="font-size: 1.1rem;">Visit the following websites to see what to expect on July 1, 2020.</span></p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Big changes are on the horizon for Michigan's No-Fault law. <span style="font-size: 1.1rem;">Visit the following websites to see what to expect on July 1, 2020.</span></p></div>
         </div>
     </div>
 </section>
@@ -468,7 +468,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EKi1P/g73ID9OjImpI8ZKikmNvli1iuCxkLoKzRaFF8R11yfGGkr2J8Ug/A7X4GU1gA/g38NPAudWf9Jx8lp3lzKnr8i84bHfoyPL7LrGeqf2IzDjx7fQOMPOVeGKHDP">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c88wI1r2CwG43J+awLPY8ML9QEeV16EfW4IoZsGzHsyukndFu1D1SByJ55vrxyXDXjSM66tMTQQJCBW6ng3lk1kPHIsaVjBH8TSZAOI8gNf6mD3GE4hOqDG9XB2JBmNd">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
