create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gf+DZgV0AKZnRUMTTes1fmz1ydPUsYieklgIpWgnVVl7L7tK6Wd4RiRpK3xgzuYnM6oZbz7PQEs/PmzVb+aV3YmUu8ihUfkv5x6/jAJQSVAlRFC8kf9hwKez/iaO5Hxz">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xlWNpLNCMAeekv38/KYpXNeQwm7PCMcvYcqgzv3znodhI2ycP0u4tQzr0EnUvt1HXpS6PlWMFcbzY9i+txc2iY68Gyl9XNEfQ0VhLmGukEmEukUYM0VCFIm2wA8Zt/CD">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
