--- a/community.html
+++ b/community.html
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 27%;">
-                <img src="assets/images/unnamed-472x839.jpg" alt="Mobirise" title="">
+                <img src="assets/images/february-21-2020-sowae-472x944.png" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,13 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Alejandro Jeminez!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Magali Perez!
 <br>
-<br>Alejandro is a junior at North Adams-Jerome High School (NAJHS). He remains active in Future Farmers of America and basketball. Alejandro is also a member of the Homecoming Court. 
+<br>Magali is a sophomore at Will Carleton Academy (WCA). She remains active in volleyball and basketball. 
 <br>
-<br>According to NAJHS Art and English teacher, Karen Christianson, “Alejandro is very hardworking and he has been working to improve his grades, this year. He is always willing to lend a helping hand around the school.” 
+<br>According to WCA History teacher, Garvin Kruse,“Magali has done an outstanding job in our Western Civilizations class, demonstrating a quiet excellence that is a great example to her classmates.  She has shown much improvement compared with a year ago, even while taking a much more challenging class.  She is a joy to teach! ”
 <br>
-<br>Congratulations, Alejandro! 
+<br>Magali plans to attend college to become a nurse following graduation.  
+<br>
+<br>Congratulations, Magali! 
 <br>
 <br>Keep up your great work.<br></p>
                             </div>
@@ -220,7 +222,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
