--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vvjg0phxOsBZaLNbbCpokNxaZUmJU13SyFsloOhhcZFZXkgMF4GdA04Q4WhBasssOa4fsufMMj0tBjPSUYV2OisLlvjBp6CMkNY4nJFcuS0wjjonSu3XGRCiPf5OdUS5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nUspjFRg8y2jeZrU3APgELCwrgktUyoVEAKDTBC6tBZoYEg7/veNr6n+RNVSTa2+NjQu9INPpOrq9yI9M8iVsluSoHV3MgqIm4E4b/4wc17Zr51IqILhs653fNidxObw">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
