--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e1CE4Mb2zI8Z+suW+B003Ln1ZaCsERdMv4InXvuBvBqBsd59AlOz16vxjFOfEFsrgfiGUQAAeegn8ljpOsjHUJqrty87ZSZnBBupS2SrIpGbDuLwwKuFo8JzituDFutM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HHsC/FDBrQxPeZny0ffg5OBWzNLKf8hsqI+vx9HvBgz1ycR2ebFeWGDnLZqzwlO+TLnS4MDAIqxPVrGvUoiJw+wQC+x29hY+PPsuO5fYV/4hlI8vjnY225ynGQXJ5U+p">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
