--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HHsC/FDBrQxPeZny0ffg5OBWzNLKf8hsqI+vx9HvBgz1ycR2ebFeWGDnLZqzwlO+TLnS4MDAIqxPVrGvUoiJw+wQC+x29hY+PPsuO5fYV/4hlI8vjnY225ynGQXJ5U+p">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WSzVv0xYavpvbHngEyZDX9EO80plubvNgvJxyhOaG5jK1GKoUGALhfWbGQyAk/+Ec/SZAlBx/osZkt2FyhoRsyc6v8nQF2NYWH7VbiOgZU6mihJf5rJK9j0N+xIuxO6+">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
