--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yEVv4XrHK3d0Z50eMVZp3tcuDagmHSlyEgobo4m2K+bIv/GSeXwxouSKEBFm1bf9XMd3Bgh6qvJ+K4Dqr0hkBW9Vp/TsB9MSmSpHv1B4Nm22eNM+sRg7P7+ovE3KDUKU">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oj2Yeqm1xLWSAeLzLBCz9p8wSawwkMoMIqm7Rva68lUFTZo3rjQCR5iujRdUZ9BaURvshmltFpMfjQ0arEfEY+H7KYjaWTcD5fGsJbO6a8VS+ZTvlfrZXM1+DxZ+YQJm">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
