--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WXK08eAGZtcbrLeWd4TgogRHUJVE6dmjynGFHZ3VePp7hM5YkesTIehuXlpGaPxpfhLgzQ/BTHhA07E+lRBW4jzQyNgcuqR1K8+UwPV1QoMs6dgXDqTkwta0klHJxLhP">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qRw0944ewwtztnkS7pF6tb2cudNpajkuC6iXLCnA6kmb1z9KEt1tysHp9sQbiCjFtkNfGE1Kq5hAkvbyLStZ67X/559B9T7rW5zUxqK4Xcm0Svo71JnC/hgwlATlEuYQ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
