--- a/community.html
+++ b/community.html
@@ -164,8 +164,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 27%;">
-                <img src="assets/images/james-fuller-march-6-2020-sowae-172x228.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 36%;">
+                <img src="assets/images/202march2-472x629.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,15 +182,14 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, James Fuller!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Max Thielen!
 <br>
-<br>James is a senior at Waldron High School (WHS). He remains active in Future Farmers of America and 4H.
+<br>Max is a sophomore at Will Carleton Academy (WCA). He remains active in football, basketball and baseball. <br>
+<br>According to WCA English teacher, Larryssa Harrington,“Max has done an exceptional job this year. Not only has he done well academically, but he has also done well staying engaged in class, asking questions, and being diligent with his assignments. I have been very proud of his overall growth as a student and person. Great job, Max!”
 <br>
-<br>According to WHS Art teacher and Yearbook Advisor, Rachel Brighton,“James is a positive student whom I can always count on to add joy to the classroom. He is kind to every person and works hard to assist in keeping our school a friendly, enjoyable place. I have watched him set goals for himself to improve as a student and [he] still works hard every day to meet those goals.”
-<br>
-<br>James plans to pursue a career in excavation or in nursing following graduation. 
-<br><br>Congratulations, James. 
-<br><br>Keep up your great work!<br></p>
+<br>Max plans to attend college to study engineering following graduation.  
+<br><br>Congratulations, Max! <br>
+<br>Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
