--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M4MBWer1bNadnDWipwXlVZabEh0ftJ2cXsnjq37uVvyoNkNJztQ2JfMsSAEwUSHpkQ3vbC5eHG+AYL0IRxy1XKzEfSAuBpodnvFOV/UENHl9zhwJGzdcLD3Jt11ipS1g">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tCm8OjAK2LfDiMkR1jaBwQmggBGZMPejnMx7b/Aeyn4lgsq2PZd2N6sEa56Q8OUiyv1gnr9WpUvSyG2Tzd52n6n6q+3LU7iUskEL2QWJjmT3IFEfwdX8r/BdWvRa+JwV">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
