--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dh7rOQjd32ZNGkZjOlobbbI2QiCBj/ugJdlFGISnjVS++z7ggn15eB/4bAzCpR6LZD8ixkay0NYIdh3c+ua1Y0GWUeRwC4jIZGDMXqp4JM5vedjj+oUdU6wTHTln6Rkn">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lVFllkxrktiMSn9BSz9mjYrZUROAK8crrxSnWiMpKqOiMlCxBROPwtWWp8DLECJ8QWqxIlMchf5hzWm1qcAQ0pIoaZtk7pHTkd2r2t+OMwnbVJxZc3HXaxDDIH4QOwOI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
