--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -209,12 +209,12 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>While we certainly want to avoid overreacting and increasing concern, we do want to be cautious about the potential of Covid-19 spreading in our area.
-<span style="font-size: 1.1rem;"></span></p><p>Barrett Insurance is still open as usual. However, we are taking extra precautions such as disinfecting desks and surfaces.
-</p><p><span style="font-size: 1.1rem;">Luckily, viruses cannot be transmitted over the phone! We can answer questions, enter claims, take payments and help you with just about anything over the phone. So consider making a phone call (517) 849-1000. &nbsp;</span><span style="font-size: 1.1rem;"></span></p><p>Payments can also be made over the phone directly to your insurance company. (Phone numbers are listed on your ID cards) or you can download apps directly to your smart phone for most of our insurance partners. 
-<span style="font-size: 1.1rem;"></span></p><p>We are keeping track of the situation. Nothing major has changed yet in our area or for Barrett Insurance, but we will make appropriate decisions based on the information we have.  If we all take preventative measures, then the impact of the virus will be lessened to ourselves and those around us. 
-<span style="font-size: 1.1rem;"></span></p><p>The best resource available with up-to-date information is Michigan.gov/coronavirus
-<span style="font-size: 1.1rem;"></span></p><p>Our amazing community will remain our top priority, and we will keep all of you informed if anything does change.</p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><span style="font-size: 1.1rem;">Please know that our thoughts and prayers go out to all those impacted by this Coronavirus. &nbsp;</span><br></p><p>In coordination with Governor Whitmer’s Executive Order, we are limiting our office staff to just a couple agents, with everyone else working remotely. We’re still open as usual, we’re just set up a little differently now. Please know that as the COVID-19 pandemic brings us into uncharted territory, we are committed to doing our part to minimize the spread of the virus while also providing responsive service to our clients.
+<span style="font-size: 1.1rem;"></span></p><p>For the safety of our clients and staff, our office is open by appointment only. We will limit the number of appointments in the office for essential services only. We are available by phone at 517-849-1000 and email. You can find a list of specific agent email addresses <a href="contact.html">here</a>.<span style="font-size: 1.1rem;"></span></p><p>
+Payments can be made by calling your insurance carrier by phone or mailing it to the company. If you require additional assistance please call our office <strong>517-849-1000</strong>. 
+<span style="font-size: 1.1rem;"></span></p><p>Thank you for your patience and understanding during this time. 
+</p><p>
+Our commitment to you, your family, and your business has not changed. We are here to serve!&nbsp;</p></div>
         </div>
     </div>
 </section>
@@ -502,7 +502,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7R+/BL/oi0JgCtj1XF83KIX89JI7vlZVTDOWY6WsKpW+z7nBPizltKSEH1QnQ94aZeDos3roxS2LK/4w0POW0x/6YjvSrN5SEJQr04e/fIYNr/Qp7Z9ubhcnetE4KZAJ">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3my1tCSDtwIj6TAKwDWJPeAdGbqIXVmnC0hB+hvBtW229I/qK5Jo0QzCrO10jT1y0E7NEjUf1zlXQyLlw2sow/Ol1QvhqCzS1iCwJN5KjIBG1gX5YJ9N4ICTC+XvMHB1">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
